Fix issues with gradle 7.0.2

--- a/sqldelight-compiler/build.gradle
+++ b/sqldelight-compiler/build.gradle
@@ -13,6 +13,9 @@ sourceSets {
 }
 
 generateGrammarSource {
+
+  new File("src/main/build").mkdirs()
+
   outputDirectory = new File("src/main/build")
 }
 
